- Fix bottom nav scroll - Fix resetting of programmatic scroll

--- a/src/app/components/comparative-event/comparative-event.component.html
+++ b/src/app/components/comparative-event/comparative-event.component.html
@@ -1,3 +1,3 @@
-<div class="max-w-xs text-xs md:text-sm font-medium text-gray-800 px-2 text-center select-none pb-4">
+<div class="max-w-xs text-sm md:text-base lg:text-lg font-medium text-gray-800 px-2 text-center select-none pb-safe-offset-4">
     {{ event.text.text }}
 </div>
