--- a/src/app/components/bottom-drawer/bottom-drawer.component.html
+++ b/src/app/components/bottom-drawer/bottom-drawer.component.html
@@ -9,7 +9,7 @@
 }
 
 <div
-    class="fixed bottom-0 left-0 z-50 w-full h-[4rem] bg-black/60 border-t border-gray-400 dark:bg-gray-700 dark:border-gray-600 ease-in-out duration-300"
+    class="fixed bottom-safe left-0 z-50 w-full h-[4rem] bg-black/60 border-t border-gray-400 dark:bg-gray-700 dark:border-gray-600 ease-in-out duration-300"
     [ngClass]="{ 'translate-y-0': isOpen, 'translate-y-full': !isOpen }"
 >
     <!-- Top arrow button -->
