--- a/src/app/components/comparative-events/comparative-events.component.html
+++ b/src/app/components/comparative-events/comparative-events.component.html
@@ -23,7 +23,7 @@
 
         <!-- Timeline bar: row 1 -->
         @for (event of events; track event.id) {
-            <div class="flex flex-col items-center h-full select-none">
+            <div class="flex flex-col items-center h-full select-none pb-safe">
                 <!-- Vertical line below date -->
                 <div>{{"|"}}</div>
 
