--- a/src/app/components/main-event/main-event.component.html
+++ b/src/app/components/main-event/main-event.component.html
@@ -1,5 +1,5 @@
 @if (event) {
-    <div class="my-2 bg-white/90 text-blue-900 text-xs md:text-sm lg:text-base font-semibold p-3 md:p-4 max-w-prose w-full shadow-md rounded-lg select-none">
+    <div class="my-2 bg-white/90 text-blue-900 text-sm md:text-base lg:text-lg font-semibold p-4 max-w-prose w-full shadow-md rounded-lg select-none">
         <h3 class="font-bold">{{event.date}}</h3>
         <div [innerHTML]="event.text.text"></div>
     </div>
