--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,6 @@
-@use "tailwindcss";
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 html, body {
     overscroll-behavior-x: contain; /* Prevents bouncing */
