- Allow mouse wheel to horizontally scroll the bottom drawer. - Allow mouse click and drag to horizontally scroll the bottom drawer.

--- a/src/app/components/parallel-timeline/parallel-timeline.component.html
+++ b/src/app/components/parallel-timeline/parallel-timeline.component.html
@@ -48,7 +48,7 @@
 
 <!-- Scrollable timeline (event groups) -->
 <div #timelineScrollRef
-    class="flex flex-row w-screen h-screen overflow-x-scroll overflow-y-hidden hide-scrollbars snap-x snap-mandatory scroll-smooth relative z-20 swipe-zone"
+    class="flex flex-row w-screen h-screen overflow-x-scroll overflow-y-hidden overscroll-x-contain hide-scrollbars snap-x snap-mandatory scroll-smooth relative z-20 swipe-zone"
     (scroll)="onTimelineScroll($event)"
 >
     @for (group of flattendEventGroups; track group.id) {
