--- a/src/styles.scss
+++ b/src/styles.scss
@@ -16,6 +16,11 @@ html, body {
     }
 }
 
+.dragging {
+    cursor: grabbing;
+    user-select: none;
+}
+
 /* You can add global styles to this file, and also import other style files */
 #tale {
     width: 100%;
