--- a/src/app/components/main-event/main-event.component.html
+++ b/src/app/components/main-event/main-event.component.html
@@ -2,12 +2,12 @@
     <div class="my-2 bg-white/90 text-blue-900 text-sm md:text-base lg:text-lg font-semibold p-4 max-w-prose w-full shadow-md rounded-lg select-none">
         <h3 class="font-bold">{{event.date}}</h3>
         <!-- Image on left, text on the right -->
-        <div class="flex flex-row">
+        <div class="flex flex-col sm:flex-row">
             @if (event.image) {
                 <div class="flex-shrink-0">
                     <img
                         [src]="event.image.url"
-                        class="w-32 md:w-48 mr-3 mb-3 h-auto rounded-lg shadow-md"
+                        class="w-32 md:w-48 sm:mr-3 mb-3 h-auto rounded-lg shadow-md"
                         [alt]="event.image.caption"
                     />
                 </div>
