- Add main events titles - Add main event titles

--- a/src/app/components/timeline-event-group/timeline-event-group.component.html
+++ b/src/app/components/timeline-event-group/timeline-event-group.component.html
@@ -2,7 +2,11 @@
     @if (group.mainEvents.length > 0) {
         <!-- Main events -->
         <div class="h-2/3 min-h-0">
-            <app-main-events [events]="group.mainEvents" [eraTitle]="eraTitle" />
+            <app-main-events
+                [events]="group.mainEvents"
+                [eventsTitle]="group.title"
+                [eraTitle]="eraTitle"
+            />
         </div>
     }
 
