--- a/src/app/components/main-event/main-event.component.html
+++ b/src/app/components/main-event/main-event.component.html
@@ -1,6 +1,6 @@
 @if (event) {
     <div class="my-2 bg-white/90 text-blue-900 text-sm md:text-base lg:text-lg font-semibold p-4 max-w-prose w-full shadow-md rounded-lg select-none">
-        <h3 class="font-bold">{{event.date}}</h3>
+        <h3 class="font-bold text-center text-2xl">{{event.text.headline}}</h3>
         <!-- Image on left, text on the right -->
         <div class="flex flex-col sm:flex-row">
             @if (event.image) {
