- Get scrolling working well on mobile and desktop - Make android fullscreen

--- a/src/app/components/comparative-events/comparative-events.component.html
+++ b/src/app/components/comparative-events/comparative-events.component.html
@@ -10,7 +10,7 @@
         }
     </div>
 
-    <div class="h-full overflow-y-auto hide-scrollbars"
+    <div class="vertical-scroll-area h-full overflow-y-auto hide-scrollbars touch-pan-y"
         [ngStyle]="{
             'background-color': background?.color ?? 'transparent',
         }"
