- Create converters between JSON and CSV for non-tech member to edit CSV - Change model to be more unified between main and comparative events

--- a/src/app/components/background/background.component.html
+++ b/src/app/components/background/background.component.html
@@ -9,7 +9,7 @@
         <div
             class="absolute inset-0 bg-cover bg-center transition-opacity duration-700"
             [style.opacity]="'1'"
-            [style.backgroundImage]="'url(' + (eraType === 'titlePage' ? singleBackground?.url : mainEventsBackground?.url) + ')'"
+            [style.backgroundImage]="'url(' + (mainEventsBackground?.url) + ')'"
         ></div>
     </div>
 
