--- a/src/app/components/main-event/main-event.component.html
+++ b/src/app/components/main-event/main-event.component.html
@@ -33,7 +33,7 @@
                 />
             }
             <div class="">
-                <h3 class="font-bold text-center text-2xl">{{event.text.headline}}</h3>
+                <h3 class="font-bold text-center text-2xl">{{event.date}}</h3>
                 <div [innerHTML]="event.text.text"></div>
             </div>
         </div>
