- Convert event brief as well for csv to json - Display brief by default with more anchor to display full text, which changes the more to a less

--- a/src/app/components/main-event/main-event.component.html
+++ b/src/app/components/main-event/main-event.component.html
@@ -32,9 +32,15 @@
                       }"
                 />
             }
-            <div class="">
+            <div>
                 <h3 class="font-bold text-center text-2xl">{{event.date}}</h3>
-                <div [innerHTML]="event.text.text"></div>
+                <div class="inline" [innerHTML]="textExpanded || !event.text.brief ? event.text.text : event.text.brief"></div>&nbsp;
+                @if (event.text.brief && event.text.brief !== event.text.text) {
+                <a href="#" (click)="textExpanded = !textExpanded; $event.preventDefault()"
+                        class="text-blue-900 hover:text-blue-700 underline font-medium text-sm md:text-base lg:text-lg">
+                        {{textExpanded ? 'less' : 'more'}}
+                    </a>
+                }
             </div>
         </div>
     </div>
