--- a/src/app/components/parallel-timeline/parallel-timeline.component.html
+++ b/src/app/components/parallel-timeline/parallel-timeline.component.html
@@ -1,18 +1,20 @@
 <!-- Fixed era layout -->
 <div class="fixed w-screen h-screen z-10">
     @if (currentEra().type === 'titlePage') {
-        <!-- Centered title -->
-        <div #eraTitleRef class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 p-3 rounded-xl bg-white/75 text-blue-900 font-bold text-6xl pointer-events-none"
-            [innerHTML]="currentEra().title?.headline"
-        >
-        </div>
+    <!-- Centered title -->
+    <div
+        #eraTitleRef
+        class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 p-3 rounded-xl bg-white/75 text-blue-900 font-bold text-6xl pointer-events-none"
+        [innerHTML]="currentEra().title?.headline"
+    ></div>
     } @else {
-        <!-- Era Title -->
-        <div #eraTitleRef class="absolute left-4 md:left-6 text-nowrap w-fit bg-white/75 p-3 rounded-xl text-blue-900 font-bold text-2xl pointer-events-none"
-            [innerHTML]="currentEra().title?.headline"
-            style="top: max(1.5rem, env(safe-area-inset-top));"
-        >
-        </div>
+    <!-- Era Title -->
+    <div
+        #eraTitleRef
+        class="absolute left-4 md:left-6 text-nowrap w-fit bg-white/75 p-3 rounded-xl text-blue-900 font-bold text-2xl pointer-events-none"
+        [innerHTML]="currentEra().title?.headline"
+        style="top: max(1.5rem, env(safe-area-inset-top))"
+    ></div>
     }
 
     <!-- For title pages -->
@@ -21,7 +23,6 @@
         [mainEventsBackground]="currentEra().mainEventsBackground"
         [comparativeEventsBackground]="currentEra().comparativeEventsBackground"
     />
-
 </div>
 <app-bottom-drawer
     [currentEraIndex]="currentEra().id"
@@ -29,24 +30,27 @@
     (eraClicked)="onDrawerEraClick($event)"
 />
 
+<!-- Audio Controls -->
+<app-audio-controls />
+
 <!-- Left and right arrows -->
 @if (currentFlatGroupIndex() > 0) {
-    <app-arrow
-        (click)="onArrowClick('left')"
-        [direction]="'left'"
-        class="absolute top-1/2 left-1 md:left-6 transform -translate-y-1/2 z-50"
-    />
-}
-@if (currentFlatGroupIndex() < flattendEventGroups.length - 1) {
-    <app-arrow
-        (click)="onArrowClick('right')"
-        [direction]="'right'"
-        class="absolute top-1/2 right-1 md:right-6 transform -translate-y-1/2 z-50"
-    />
+<app-arrow
+    (click)="onArrowClick('left')"
+    [direction]="'left'"
+    class="absolute top-1/2 left-1 md:left-6 transform -translate-y-1/2 z-50"
+/>
+} @if (currentFlatGroupIndex() < flattendEventGroups.length - 1) {
+<app-arrow
+    (click)="onArrowClick('right')"
+    [direction]="'right'"
+    class="absolute top-1/2 right-1 md:right-6 transform -translate-y-1/2 z-50"
+/>
 }
 
 <!-- Scrollable timeline (event groups) -->
-<div #timelineScrollRef
+<div
+    #timelineScrollRef
     class="flex flex-row w-screen h-screen overflow-y-hidden overscroll-x-contain hide-scrollbars snap-x snap-mandatory relative z-20"
     [ngClass]="{
         'overflow-x-auto touch-pan-x': !isMobileOrTablet,
@@ -55,8 +59,12 @@
     (scroll)="onTimelineScroll($event)"
 >
     @for (group of flattendEventGroups; track group.id) {
-        <div class="w-screen h-screen flex flex-col snap-center flex-shrink-0">
-            <app-timeline-event-group [group]="group" [eraTitle]="currentEra().title?.headline" id="group-{{currentFlatGroupIndex()}}" />
-        </div>
+    <div class="w-screen h-screen flex flex-col snap-center flex-shrink-0">
+        <app-timeline-event-group
+            [group]="group"
+            [eraTitle]="currentEra().title?.headline"
+            id="group-{{ currentFlatGroupIndex() }}"
+        />
+    </div>
     }
 </div>
