--- a/src/app/components/timeline-event-group/timeline-event-group.component.html
+++ b/src/app/components/timeline-event-group/timeline-event-group.component.html
@@ -1,7 +1,7 @@
 <div class="flex flex-col h-screen">
     @if (group.mainEvents.length > 0) {
         <!-- Main events -->
-        <div class="h-2/3 min-h-0">
+        <div class="h-2/3 min-h-0 mb-4">
             <app-main-events
                 [events]="group.mainEvents"
                 [eventsTitle]="group.title"
