--- a/src/app/components/parallel-timeline/parallel-timeline.component.html
+++ b/src/app/components/parallel-timeline/parallel-timeline.component.html
@@ -1,21 +1,5 @@
 <!-- Fixed era layout -->
 <div class="fixed w-screen h-screen z-10">
-    @if (currentEra().type === "titlePage") {
-        <!-- Centered title -->
-        <div
-            #eraTitleRef
-            class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 p-3 rounded-xl bg-white/75 text-blue-900 font-bold text-6xl pointer-events-none"
-            [innerHTML]="currentEra().title?.headline"
-        ></div>
-    } @else {
-        <!-- Era Title -->
-        <div
-            #eraTitleRef
-            class="absolute left-4 md:left-6 text-nowrap w-fit bg-white/75 p-3 rounded-xl text-blue-900 font-bold text-2xl pointer-events-none top-[max(4rem,env(safe-area-inset-top))] md:top-[max(1.5rem,env(safe-area-inset-top))]"
-            [innerHTML]="currentEra().title?.headline"
-        ></div>
-    }
-
     <!-- For title pages -->
     <app-background
         [eraType]="currentEra().type"
@@ -23,6 +7,22 @@
         [comparativeEventsBackground]="currentEra().comparativeEventsBackground"
     />
 </div>
+@if (currentEra().type === "titlePage") {
+    <!-- Centered title -->
+    <div
+        #eraTitleRef
+        class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 p-3 rounded-xl bg-white/75 text-blue-900 font-bold text-6xl pointer-events-none"
+        [innerHTML]="currentEra().title?.headline"
+    ></div>
+} @else {
+    <!-- Era Title -->
+    <div
+        #eraTitleRef
+        class="absolute left-4 md:left-6 text-nowrap w-fit bg-white/75 p-3 rounded-xl text-blue-900 font-bold text-2xl top-[max(4rem,env(safe-area-inset-top))] md:top-[max(1.5rem,env(safe-area-inset-top))] z-30 cursor-pointer"
+        [innerHTML]="currentEra().title?.headline"
+        (click)="onEraTitleClick()"
+    ></div>
+}
 <app-bottom-drawer
     [currentEraIndex]="currentEra().id"
     [eras]="drawerCards"
